--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -1,3 +1,14 @@
+<div id="mapid"></div>
+
+<script>
+var mymap = L.map('mapid').setView([35.678362, 139.715387], 13);
+
+L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a>',
+  maxZoom: 18,
+}).addTo(mymap);
+</script>
+
 <%= form_with(model: map, local: true) do |form| %>
   <% if map.errors.any? %>
     <div id="error_explanation">
