viewのjsをjsファイルに移行

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -29,8 +29,11 @@
       </tr>
     <% end %>
   </tbody>
+  
 </table>
 
 <br>
 
 <%= link_to 'New Map', new_map_path %>
+
+<%= javascript_include_tag 'mapindex' %>
